modified changes in .env

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 
-SMTP_ACCOUNTS_JSON=[{ "email": "aidni.tech@gmail.com", "password": "slsn ucyy dzhg ykgu" },{ "email": "gaatha.ro.tech@gmail.com", "password": "xziz jubj fiml uicd" },{ "email": "nexora.gaatha@gmail.com", "password": "esdl qvmr vaun pwdn" },{ "email": "nexora.aidni@gmail.com", "password": "mqas lqbv khyv dfzm" } ]
+SMTP_ACCOUNTS_JSON=[{ "email": "aidni.tech@gmail.com", "password": "udas jpiu tmnn none" },{ "email": "gaatha.ro.tech@gmail.com", "password": "blxi khkv uueq idzf" },{ "email": "nexora.gaatha@gmail.com", "password": "esdl qvmr vaun pwdn" },{ "email": "nexora.aidni@gmail.com", "password": "mqas lqbv khyv dfzm" } , {"email": "haddygajjar@gmail.com" , "password":"vorm zjhj itnz xykk"}, {"email": "gaatha.aidni@gmail.com", "password": "byqu kiql dakz anat"} ]
 
 REPORT_EMAIL=nexora.aidni@gmail.com
 DAILY_LIMIT=100
