--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 Flask
 Flask-SQLAlchemy
 python-dotenv
-Flask-SocketIO
+Flask-SocketIO==5.3.6
+python-socketio==5.11.2
+python-engineio==4.9.1
 eventlet
 APScheduler
